--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
     "username": "postgres",
-    "password": "lolo",
-    "database": "estadiosfutbol2",
-    "host": "127.0.0.1",
+    "password": "lety0297",
+    "database": "estadios",
+    "host": "35.232.69.182",
     "dialect": "postgres"
   
   },
@@ -15,10 +15,10 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "postgres",
+    "password": "lety0297",
+    "database": "estadios",
+    "host": "35.232.69.182",
     "dialect": "postgres"
   }
 }
